# securities-list

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: update-securities.yml
data/parsed/: securities-1.json  securities-11.json  securities-12.json  securities-2.json  securities-3.json  securities-4.json  securities-5.json  securities-6.json  securities-7.json  securities-8.json  securities-9.json  securities-full-1.json  securities-full-11.json  securities-full-12.json  securities-full-3.json  securities-full-5.json  securities-full-7.json  securities-full-8.json  securities-full-9.json
data/raw/: 1-本國未上市，未上櫃公開發行證券，國際證券辨識號碼一覽表.html  10-外幣計價可轉換定期存單，國際證券辨識號碼一覽表.html  11-本國指數國際證券辨識號碼一覽表.html  12-本國具證券性質之虛擬通貨(STO)國際證券辨識號碼一覽表.html  3-本國上市債券，上櫃債券，國際證券辨識號碼一覽表.html  4-本國上櫃證券國際證券辨識號碼一覽表.html  5-本國興櫃證券國際證券辨識號碼一覽表.html  6-本國期貨及選擇權國際證券辨識號碼一覽表.html  7-本國開放式證券投資信託基金，國際證券辨識號碼一覽表.html  8-本國未公開發行之創櫃板證券國際證券辨識號碼一覽表.html  9-登錄買賣黃金現貨國際證券辨識號碼一覽表.html
src/securities_list/: download_raw.py  parse_raw.py
tests/: test_parse_raw.py
